--- a/backend2/requirements.txt
+++ b/backend2/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-python-dotenv==1.0.0
-pandas==2.2.2
-python-dateutil==2.8.2
-supabase-py==1.0.0
-rapidfuzz==2.16.0
-openpyxl==3.1.2
-python-multipart==0.0.6
-certifi==2024.11.20
+fastapi
+uvicorn[standard]
+python-dotenv
+pandas
+python-dateutil
+supabase
+rapidfuzz
+openpyxl
+python-multipart
+certifi
